language/move-prover/tests/sources/functional/pragma.exp
Move prover returns: exiting with boogie verification errors
error: abort not covered by any of the `aborts_if` clauses

    ┌── tests/sources/functional/pragma.move:13:5 ───
    │
 13 │ ╭     spec always_aborts_with_verify_incorrect {
 14 │ │         pragma verify=true;
 15 │ │         aborts_if _c;
 16 │ │     }
    │ ╰─────^
    ·
 11 │         abort(1)
    │         -------- abort happened here with code 0x1
    │
    =     at tests/sources/functional/pragma.move:10: always_aborts_with_verify_incorrect
    =         _c = <redacted>
    =     at tests/sources/functional/pragma.move:11: always_aborts_with_verify_incorrect
    =     at tests/sources/functional/pragma.move:11: always_aborts_with_verify_incorrect
    =         ABORTED
